--- a/source/win32/msvc/pbpeditor/pbpeditor.vcproj
+++ b/source/win32/msvc/pbpeditor/pbpeditor.vcproj
@@ -508,6 +508,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\statistics.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\stdio-errorhandler.cpp"
 				>
 			</File>
