--- a/source/win32/msvc/mapeditor/mapeditor.vcproj
+++ b/source/win32/msvc/mapeditor/mapeditor.vcproj
@@ -495,6 +495,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\statistics.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\stdio-errorhandler.cpp"
 				>
 			</File>
