--- a/source/actions/Makefile.in
+++ b/source/actions/Makefile.in
@@ -50,9 +50,9 @@ libactions_la_OBJECTS = $(am_libactions_la_OBJECTS)
 libdirectunitactions_la_DEPENDENCIES =
 am_libdirectunitactions_la_OBJECTS = inflictdamage.lo \
 	destructcontainer.lo constructbuildingcommand.lo \
-	spawnbuilding.lo changeunitmovement.lo unitaction.lo \
-	changeunitproperty.lo registerunitrftarget.lo \
-	consumeresource.lo containeraction.lo \
+	spawnbuilding.lo destructbuildingcommand.lo \
+	changeunitmovement.lo unitaction.lo changeunitproperty.lo \
+	registerunitrftarget.lo consumeresource.lo containeraction.lo \
 	changecontainerproperty.lo unitfieldregistration.lo \
 	viewregistration.lo consumeammo.lo recycleunitcommand.lo \
 	destructunitcommand.lo reactionfireswitchcommand.lo \
@@ -271,7 +271,7 @@ AM_CXXFLAGS = $(SDL_CFLAGS) $(SIGC_CFLAGS)  @LokiInclude@
 noinst_LTLIBRARIES = libactions.la libdirectunitactions.la libmiscactions.la libmapactions.la libfullgameactions.la
 libactions_la_SOURCES = action.cpp command.cpp context.cpp actionresult.cpp actioncontainer.cpp containeraction.cpp
 libactions_la_LIBADD = @SDL_LIBS@
-libdirectunitactions_la_SOURCES = inflictdamage.cpp destructcontainer.cpp constructbuildingcommand.cpp spawnbuilding.cpp \
+libdirectunitactions_la_SOURCES = inflictdamage.cpp destructcontainer.cpp constructbuildingcommand.cpp spawnbuilding.cpp destructbuildingcommand.cpp \
                           changeunitmovement.cpp unitaction.cpp changeunitproperty.cpp registerunitrftarget.cpp consumeresource.cpp \
                           containeraction.cpp changecontainerproperty.cpp unitfieldregistration.cpp viewregistration.cpp consumeammo.cpp \
                           recycleunitcommand.cpp destructunitcommand.cpp reactionfireswitchcommand.cpp repairunitcommand.cpp
@@ -365,6 +365,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/containercommand.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/context.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/convertcontainer.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/destructbuildingcommand.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/destructcontainer.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/destructunitcommand.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/discoverresources.Plo@am__quote@
