New commands that are undo capable:    switch unit power generation    jump drive  Fixed: clicking close on UnitInfoDialog caused click on parent dialog

--- a/source/actions/Makefile.am
+++ b/source/actions/Makefile.am
@@ -11,10 +11,12 @@ libactions_la_LIBADD		= @SDL_LIBS@
 libdirectunitactions_la_SOURCES	=  inflictdamage.cpp destructcontainer.cpp constructbuildingcommand.cpp spawnbuilding.cpp destructbuildingcommand.cpp \
                           changeunitmovement.cpp unitaction.cpp changeunitproperty.cpp registerunitrftarget.cpp consumeresource.cpp \
                           containeraction.cpp changecontainerproperty.cpp unitfieldregistration.cpp viewregistration.cpp consumeammo.cpp \
-                          recycleunitcommand.cpp destructunitcommand.cpp reactionfireswitchcommand.cpp repairunitcommand.cpp
+                          recycleunitcommand.cpp destructunitcommand.cpp reactionfireswitchcommand.cpp repairunitcommand.cpp jumpdrivecommand.cpp \
+                          powergenerationswitchcommand.cpp
+                          
 libdirectunitactions_la_LIBADD		= @SDL_LIBS@
 
-libmiscactions_la_SOURCES	= servicing.cpp jumpdrive.cpp selfdestruct.cpp spawnmine.cpp putobjectcommand.cpp putminecommand.cpp
+libmiscactions_la_SOURCES	= servicing.cpp spawnmine.cpp putobjectcommand.cpp putminecommand.cpp
 libmiscactions_la_LIBADD		= @SDL_LIBS@
 
 libmapactions_la_SOURCES	= spawnobject.cpp spawnmine.cpp changeview.cpp removemine.cpp removeobject.cpp changeobjectproperty.cpp
