Added training to undo-capable actions

--- a/source/actions/Makefile.am
+++ b/source/actions/Makefile.am
@@ -12,7 +12,7 @@ libdirectunitactions_la_SOURCES	=  inflictdamage.cpp destructcontainer.cpp const
                           changeunitmovement.cpp unitaction.cpp changeunitproperty.cpp registerunitrftarget.cpp consumeresource.cpp \
                           containeraction.cpp changecontainerproperty.cpp unitfieldregistration.cpp viewregistration.cpp consumeammo.cpp \
                           recycleunitcommand.cpp destructunitcommand.cpp reactionfireswitchcommand.cpp repairunitcommand.cpp jumpdrivecommand.cpp \
-                          powergenerationswitchcommand.cpp
+                          powergenerationswitchcommand.cpp trainunitcommand.cpp
                           
 libdirectunitactions_la_LIBADD		= @SDL_LIBS@
 
