Implemented unittest for ASC

--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(asc, )
+AC_INIT(asc,2.2.100.20)
 
 AM_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE
@@ -668,6 +668,7 @@ AC_CONFIG_FILES( [ Makefile \
        source/tasks/Makefile \
        source/video/Makefile \
        source/lua/Makefile \
+       source/unittests/Makefile \
        source/doc/Makefile \
        source/libs/Makefile \
        source/libs/sdlmm/Makefile \
