--- a/source/unix/asc/Makefile.in
+++ b/source/unix/asc/Makefile.in
@@ -95,8 +95,7 @@ am__DEPENDENCIES_2 =  \
 	$(top_builddir)/source/libs/triangul/libtriangul.la \
 	$(top_builddir)/source/ai/libai.la \
 	$(top_builddir)/source/libs/sdlmm/src/libSDLmm.la \
-	$(top_builddir)/source/sdl/libsdl.la \
-	$(top_builddir)/source/libs/loki-0.1.6/libloki.la \
+	$(top_builddir)/source/sdl/libsdl.la $(am__DEPENDENCIES_1) \
 	$(top_builddir)/source/util/libutil.la \
 	$(top_builddir)/source/tasks/libtasks.la \
 	$(top_builddir)/source/graphics/libgraphics.la \
@@ -195,6 +194,7 @@ LIBPHYSFS = @LIBPHYSFS@
 LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
+LOKI_LIBS = @LOKI_LIBS@
 LTLIBOBJS = @LTLIBOBJS@
 LUA_FLAGS = @LUA_FLAGS@
 LUA_LIBS = @LUA_LIBS@
@@ -332,7 +332,7 @@ playercolor.cpp pg_mapdisplay.cpp autotraining.cpp
 
 commonLibs = $(top_builddir)/source/libs/triangul/libtriangul.la \
 $(top_builddir)/source/ai/libai.la $(top_builddir)/source/libs/sdlmm/src/libSDLmm.la \
-$(top_builddir)/source/sdl/libsdl.la  $(top_builddir)/source/libs/loki-0.1.6/libloki.la \
+$(top_builddir)/source/sdl/libsdl.la  $(LOKI_LIBS) \
 @LUA_LOCAL_LIB@  \
 $(top_builddir)/source/util/libutil.la  $(top_builddir)/source/tasks/libtasks.la \
 $(top_builddir)/source/graphics/libgraphics.la $(top_builddir)/source/dialogs/libdialogs.la \
