--- a/source/unix/asc/Makefile.am
+++ b/source/unix/asc/Makefile.am
@@ -35,7 +35,7 @@ playercolor.cpp pg_mapdisplay.cpp autotraining.cpp
 
 commonLibs =  $(top_builddir)/source/libs/triangul/libtriangul.la \
 $(top_builddir)/source/ai/libai.la $(top_builddir)/source/libs/sdlmm/src/libSDLmm.la \
-$(top_builddir)/source/sdl/libsdl.la  $(top_builddir)/source/libs/loki-0.1.6/libloki.la \
+$(top_builddir)/source/sdl/libsdl.la  $(LOKI_LIBS) \
 @LUA_LOCAL_LIB@  \
 $(top_builddir)/source/util/libutil.la  $(top_builddir)/source/tasks/libtasks.la \
 $(top_builddir)/source/graphics/libgraphics.la $(top_builddir)/source/dialogs/libdialogs.la \
